@@ -126,6 +126,7 @@
     <Compile Include="Classes\ClassCallingVirtualMethodFromCtor.cs" />
     <Compile Include="Classes\ClassWithCharRetType.cs" />
     <Compile Include="Classes\ClassWithConstructors.cs" />
+    <Compile Include="Classes\ClassWithCtorTakingArray.cs" />
     <Compile Include="Classes\ClassWithInternalDefaultConstructor.cs" />
     <Compile Include="Classes\ClassWithProtectedDefaultConstructor.cs" />
     <Compile Include="Classes\MySerializableClass.cs" />
@@ -133,8 +134,11 @@
     <Compile Include="Classes\SimpleClass.cs" />
     <Compile Include="Classes\ClassOverridingEqualsAndGetHashCode.cs" />
     <Compile Include="Classes\ClassWithDefaultConstructor.cs" />
+    <Compile Include="ClassProxyConstructorsTestCase.cs" />
+    <Compile Include="GenClasses\MethodWithArgumentBeingArrayOfGenericTypeOfT.cs" />
     <Compile Include="GenericMethodsProxyTestCase.cs" />
     <Compile Include="DictionarySerializationTestCase.cs" />
+    <Compile Include="GenInterfaces\GenericMethodWhereOneGenParamInheritsTheOther.cs" />
     <Compile Include="InterClasses\IInterfaceWithGenericMethodWithDependentConstraint.cs" />
     <Compile Include="InheritedInterfacesTestCase.cs" />
     <Compile Include="Interceptors\InterceptorSelectorTestCase.cs" />
